--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -12,6 +12,12 @@ img {
   @include w-100;
   //height: 100vh;
   //box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
+  @supports (grid-gap: 0) {
+    height: 100vh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: minmax(10em, 1fr);
+  }
 }
 
 .container {
@@ -25,10 +31,69 @@ img {
   @include flex;
   @include flex-d-col;
   @include flex-grow-1;
+
   > * {
     @include w-100;
     & + *:not(.banner-full) {
       @include pad-block;
     }
   }
+
+  // css grid support
+  @supports (grid-gap: 0) {
+    grid-row: 2 / 3;
+  }
+
+}
+
+// content page
+
+.content-page {
+
+  // header
+  .site-header {
+    position: relative;
+  }
+
+  // main
+  #main {
+    > * {
+      & + *:not(.banner-full) {
+        //@include pt-2;
+        //@include pb-2;
+      }
+    }
+  }
+
+  .card {
+
+    &-row {
+
+      .card-block {
+        //@include pt-2;
+      }
+
+      @media (min-width: $break-ml-phone) {
+
+        .media-item {
+          @include as-stretch;
+          @include pt-4;
+          //@include w-30;
+        }
+
+      }
+      @media (min-width: $break-md-screen) {
+        .media-item {
+          @include pt-0;
+        }
+
+        .card-block {
+          padding: 4em 10em 4em 7em;
+        }
+      }
+    }
+  }
+
+
+
 }
