--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,6 +27,7 @@
 //@import "modules/features";
 
 // Templates
+@import "templates/page-content";
 // @import "templates/dashboard";
 
 // Modifiers
