--- a/scss/components/_masthead.scss
+++ b/scss/components/_masthead.scss
@@ -1,6 +1,13 @@
 // Masthead (page header)
 
 .masthead {
+  background-color: $ca-grey-EEE;
   @include w-100;
   @include text-center;
+  p {
+    @include mw-40em;
+    @include mr-ml-a;
+    @include mb-2;
+    @include text-md;
+  }
 }
