--- a/scss/components/navigation/_breadcrumbs.scss
+++ b/scss/components/navigation/_breadcrumbs.scss
@@ -1,10 +1,10 @@
 .breadcrumb {
-  @include hidden;
+  // @include hidden;
   @include bg-trans;
   @include mb-0;
   @include text-sm;
   .container {
-    @include flex;
-    @include jc-end;
+    //@include flex;
+    //@include jc-end;
   }
 }
