--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,7 +12,7 @@
 @import "elements/icons";
 @import "elements/buttons";
 //@import "elements/tabs";
-@import "elements/media-wrap";
+@import "elements/media-item";
 
 // Components
 @import "components/navigation/navigation";
