--- a/css/modifiers.css
+++ b/css/modifiers.css
@@ -16,53 +16,63 @@
   font-weight: normal;
   font-style: normal; }
 
-.ca-black-c {
-  color: #111; }
-
-.ca-white-c {
-  color: #FCFCFC; }
-
-.ca-charcoal-c {
-  color: #222; }
-
-.ca-grey-CCC-c {
-  color: #CCC; }
-
-.ca-grey-EEE-c {
-  color: #EEE; }
-
-.ca-warning {
-  color: #FF2222; }
-
-.theme-black {
-  background-color: #111;
-  background: #111;
-  color: #FCFCFC; }
-
-.theme-blue {
-  background-color: #00A2E1;
-  background: #00A2E1;
-  color: #FCFCFC; }
-
-.theme-green {
-  background-color: #7EB963;
-  background: #7EB963;
-  color: #FCFCFC; }
-
-.theme-purple {
-  background-color: #A0AFD4;
-  background: #A0AFD4;
-  color: #FCFCFC; }
-
-.theme-orange {
-  background-color: #F6BE1E;
-  background: #F6BE1E;
-  color: #FCFCFC; }
-
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(10.5em, 1fr));
   grid-gap: .5em; }
+
+.circle-mask {
+  border-radius: 50%;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  max-height: 25rem;
+  max-width: 25rem; }
+  .circle-mask img {
+    border-radius: 50%; }
+  .circle-mask figcaption {
+    display: none; }
+  .circle-mask.mask-outside {
+    shape-outside: circle(); }
+
+.circle-mask-md {
+  border-radius: 50%;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  max-height: 25rem;
+  max-width: 25rem;
+  max-height: 20rem;
+  max-width: 20rem; }
+  .circle-mask-md img {
+    border-radius: 50%; }
+  .circle-mask-md figcaption {
+    display: none; }
+  .circle-mask-md.mask-outside {
+    shape-outside: circle(); }
+
+.circle-mask-sm {
+  border-radius: 50%;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  max-height: 25rem;
+  max-width: 25rem;
+  max-height: 10rem;
+  max-width: 10rem; }
+  .circle-mask-sm img {
+    border-radius: 50%; }
+  .circle-mask-sm figcaption {
+    display: none; }
+  .circle-mask-sm.mask-outside {
+    shape-outside: circle(); }
+
+.rounded-mask {
+  border-radius: 1rem;
+  width: 100%;
+  overflow: hidden; }
+  .rounded-mask img {
+    border-radius: 1rem; }
 
 @keyframes fade-in {
   0% {
@@ -127,69 +137,6 @@
   .banner-full > .container {
     padding: 0;
     max-width: 100%; }
-
-.circle-mask {
-  border-radius: 50%;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-  max-height: 25rem;
-  max-width: 25rem; }
-  .circle-mask img {
-    border-radius: 50%;
-    overflow: hidden; }
-  .circle-mask.float-l, .circle-mask.float-r {
-    shape-outside: circle();
-    margin: 1rem; }
-  .circle-mask.float-l {
-    margin: 0 2.5rem 2.5rem 0; }
-  .circle-mask.float-r {
-    margin: 0 0 2.5rem 2.5rem; }
-
-.circle-mask-md {
-  border-radius: 50%;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-  max-height: 25rem;
-  max-width: 25rem;
-  max-height: 20rem;
-  max-width: 20rem; }
-  .circle-mask-md img {
-    border-radius: 50%;
-    overflow: hidden; }
-  .circle-mask-md.float-l, .circle-mask-md.float-r {
-    shape-outside: circle();
-    margin: 1rem; }
-  .circle-mask-md.float-l {
-    margin: 0 2.5rem 2.5rem 0; }
-  .circle-mask-md.float-r {
-    margin: 0 0 2.5rem 2.5rem; }
-
-.circle-mask-sm {
-  border-radius: 50%;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-  max-height: 25rem;
-  max-width: 25rem;
-  max-height: 10rem;
-  max-width: 10rem; }
-  .circle-mask-sm img {
-    border-radius: 50%;
-    overflow: hidden; }
-  .circle-mask-sm.float-l, .circle-mask-sm.float-r {
-    shape-outside: circle();
-    margin: 1rem; }
-  .circle-mask-sm.float-l {
-    margin: 0 2.5rem 2.5rem 0; }
-  .circle-mask-sm.float-r {
-    margin: 0 0 2.5rem 2.5rem; }
-
-.rounded-mask {
-  border-radius: 1rem;
-  width: 100%;
-  overflow: hidden; }
 
 .hide-text {
   color: transparent;
