--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -20,6 +20,7 @@
 @import "components/masthead";
 @import "components/cards";
 @import "components/banners";
+@import "components/blockquote";
 
 // Modules
 @import "modules/site-header";
